<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>io.goobi.vocabulary</groupId>
    <artifactId>vocabulary-server</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>Vocabulary-Server</name>
    <packaging>pom</packaging>
    <description>RESTful webservice for vocabulary management</description>
    <properties>
        <java.version>11</java.version>
    </properties>
    <modules>
        <module>module-core</module>
        <module>module-exchange</module>
    </modules>
</project>
